# TubePulse

./: .gitignore  README.md  mlflow.db  pipeline.py  pyproject.toml  requirements.txt  run.py  setup.py  templete.py
config/: schema.yaml
mlruns/1/models/m-331804598a98462a8d89e340eac49023/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-a0cf7f9bac464bf0a946fded55cfb3c9/artifacts/: MLmodel  conda.yaml  model.pkl
plugin/: manifest.json  popup.css  popup.html  popup.js  styles.css
src/components/api/: __init__.py
src/components/api/routes/: app.py
src/components/engine/: tubepluse_engine.py
src/components/ingestion/: data_ingestion.py
src/components/model/: model_bulding.py
src/components/preprocessing/: __init__.py  data_preprocessing.py  data_transformation.py
src/components/validation/: data_validation.py
src/configuration/mongobd/: mongo_db_connection.py
src/configuration/mongodb/: mongo_db_connection.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/logging/: __init__.py
src/notebook/: TubePulse_1_0.ipynb  mongoDB.ipynb  output.csv
src/pipeline/: training_pipeline.py
src/utils/: __init__.py
